Improvements and fixes to condegram (viz1): loading component added, remove the unnecessary/duplicate link rel CSS style in body of the component, changed global styles.css for alignment of viz1

--- a/webapp/src/styles.scss
+++ b/webapp/src/styles.scss
@@ -172,7 +172,6 @@ select {
 }
 
 .chart_condegram {
-  padding-left: 200px;
 }
 
 
